--- a/docs/source/explanation/Ins-and-Outs-of-Polynomials.ipynb
+++ b/docs/source/explanation/Ins-and-Outs-of-Polynomials.ipynb
@@ -224,8 +224,8 @@
     "\n",
     "Both types of Chevyshev polynomials are supported.  They are both just special cases of Jacobi polynomials:\n",
     "\n",
-    "$$ \\text{cheby1} \\equiv P_n^\\left(-0.5,-0.5\\right)(x) $$\n",
-    "$$ \\text{cheby2} \\equiv P_n^\\left(0.5,0.5\\right)(x) $$"
+    "$$ \\text{cheby1} \\equiv P_n^\\left(-0.5,-0.5\\right)(x) \\quad / \\quad P_n^\\left(-0.5,-0.5\\right)(1)$$\n",
+    "$$ \\text{cheby2} \\equiv P_n^\\left(0.5,0.5\\right)(x) \\quad / \\quad P_n^\\left(0.5,0.5\\right)(1)$$"
    ]
   },
   {
@@ -251,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The most typical use of these polynomials in optics are as an orthogonal basis over some rectangular aperture.  The calculation is separable in x and y, so it can be reduced from scaling by $N\\cdot M$ to just $N+M$.  prysm will compute the mode for one column of x and one row of y, then broadcast to 2D to assemble the 'image'.  This introduces three new functions:"
+    "The most typical use of these polynomials in optics are as an orthogonal basis over some rectangular aperture.  The calculation is separable in x and y, so it can be reduced from scaling by $2(N\\cdot M)$ to just $N+M$.  prysm will compute the mode for one column of x and one row of y, then broadcast to 2D to assemble the 'image'.  This introduces three new functions:"
    ]
   },
   {
@@ -312,7 +312,7 @@
     "\n",
     "These polynomials are just a special case of Jacobi polynomials:\n",
     "\n",
-    "$$ \\text{legendre} \\equiv P_n^\\left(-0,-0\\right)(x) $$\n",
+    "$$ \\text{legendre} \\equiv P_n^\\left(0,0\\right)(x) $$\n",
     "\n",
     "Usage follows from the [Chebyshev](#Chebyshev) exactly, except the functions are prefixed by `legendre`."
    ]
