fix link in polychromatic propagation how-to

--- a/docs/source/how-tos/Polychromatic Propagation.ipynb
+++ b/docs/source/how-tos/Polychromatic Propagation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Polychromatic Propagation\n",
     "\n",
-    "This how-to is extremely brief, and covers how to use prysm to model polychromatic propagation.  The user should already be familiar with the [First Diffraction Model](./First-Diffraction-Model.ipynb) tutorial before working through this how-to.\n",
+    "This how-to is extremely brief, and covers how to use prysm to model polychromatic propagation.  The user should already be familiar with the [First Diffraction Model](../tutorials/First-Diffraction-Model.ipynb) tutorial before working through this how-to.\n",
     "\n",
     "In optics education, most problems are monochromatic.  In real hardawre, there are some special cases of highly monochromatic sources, such as the HeNe and other noble gas lasers.  However, stars and most other light sources have significant spectral bandwidth.  Properly modeling those situations requires the propagation of polychromatic fields.  Recall that the relationship between the sampling in a pupil plane and the far field is:\n",
     "\n",
@@ -126,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
