update polynomial docs

--- a/docs/source/explanation/Ins-and-Outs-of-Polynomials.ipynb
+++ b/docs/source/explanation/Ins-and-Outs-of-Polynomials.ipynb
@@ -38,9 +38,10 @@
     "- [Jacobi](#Jacobi)\n",
     "- [Chebyshev](#Chebyshev)\n",
     "- [Legendre](#Legendre)\n",
+    "- [Dickson](#Dickson)\n",
     "- [Qs](#Qs)\n",
     "\n",
-    "Note that all polynomial types allow evaluation for arbitrary order.\n",
+    "Note that all polynomial types allow evaluation for arbitrary order.  First partial derivatives can be computed using the format `{polynomial}_der` or `{polynomial}_der_sequence`.  1D polynomials are differentiated with respect to x.  2D polynomials do not yet support differentiation.  Differentiation is done analytically and does not rely on finite differences.\n",
     "\n",
     "## Hopkins\n",
     "\n",
@@ -206,14 +207,14 @@
     "from prysm.polynomials import jacobi, jacobi_sequence\n",
     "\n",
     "x_ = x[0,:] # not required to be 1D, just for example\n",
-    "plt.plot(x_, jacobi(3,0,0,x_))"
+    "plt.plot(x_, np.array(list(jacobi_sequence([1,2,3,4,5],0,0,x_))).T)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This shape may be familiar as the Zernike flavor of coma across one axis."
+    "These shapes may be familiar to Zernike polynomials."
    ]
   },
   {
@@ -222,10 +223,15 @@
    "source": [
     "## Chebyshev\n",
     "\n",
-    "Both types of Chevyshev polynomials are supported.  They are both just special cases of Jacobi polynomials:\n",
+    "All four types of Chevyshev polynomials are supported.  They are just special cases of Jacobi polynomials.  The first and second kind are common:\n",
     "\n",
-    "$$ \\text{cheby1} \\equiv P_n^\\left(-0.5,-0.5\\right)(x) \\quad / \\quad P_n^\\left(-0.5,-0.5\\right)(1)$$\n",
-    "$$ \\text{cheby2} \\equiv P_n^\\left(0.5,0.5\\right)(x) \\quad / \\quad P_n^\\left(0.5,0.5\\right)(1)$$"
+    "$$ T(x) = \\text{cheby1}  \\equiv P_n^\\left(-0.5,-0.5\\right)(x) \\quad / \\quad P_n^\\left(-0.5,-0.5\\right)(1)$$\n",
+    "$$ U(x) = \\text{cheby2}  \\equiv (n+1) P_n^\\left(0.5,0.5\\right)(x) \\quad / \\quad P_n^\\left(0.5,0.5\\right)(1)$$\n",
+    "\n",
+    "While the third and fourth kind are more obscure:\n",
+    "\n",
+    "$$ V(x) = \\text{cheby3}  \\equiv P_n^\\left(-0.5,0.5\\right)(x) \\quad / \\quad P_n^\\left(-0.5,0.5\\right)(1)$$\n",
+    "$$ W(x) = \\text{cheby4}  \\equiv (2n+1) P_n^\\left(0.5,-0.5\\right)(x) \\quad / \\quad P_n^\\left(0.5,-0.5\\right)(1)$$"
    ]
   },
   {
@@ -234,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prysm.polynomials import cheby1, cheby2, cheby1_sequence"
+    "from prysm.polynomials import cheby1, cheby2, cheby1_sequence, cheby3, cheby4"
    ]
   },
   {
@@ -243,8 +249,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(x_, cheby1(3,x_), x_, cheby2(3,x_))\n",
-    "plt.legend(['first kind', 'second kind'])"
+    "fs = [cheby1, cheby2, cheby3, cheby4]\n",
+    "n = 5\n",
+    "for f in fs:\n",
+    "    plt.plot(x_, f(n,x_))\n",
+    "plt.legend(['first kind', 'second kind', 'third kind', 'fourth kind'])"
    ]
   },
   {
@@ -260,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prysm.polynomials import cheby1_2d_sequence, mode_1d_to_2d, sum_of_xy_modes # or cheby2_..."
+    "from prysm.polynomials import separable_2d_sequence, mode_1d_to_2d, sum_of_xy_modes"
    ]
   },
   {
@@ -272,7 +281,7 @@
     "# orders 1, 2, 3 in x and 4, 5, 6 in y\n",
     "ns = [1, 2, 3]\n",
     "ms = [4, 5, 6]\n",
-    "modesx, modesy = cheby1_2d_sequence(ns, ms, x, y)\n",
+    "modesx, modesy = separable_2d_sequence(ns, ms, x, y, cheby1_sequence)\n",
     "plt.plot(x_, modesx[0]) # modes are 1D\n",
     "plt.title('a single mode, 1D')\n",
     "plt.figure()\n",
@@ -314,7 +323,7 @@
     "\n",
     "$$ \\text{legendre} \\equiv P_n^\\left(0,0\\right)(x) $$\n",
     "\n",
-    "Usage follows from the [Chebyshev](#Chebyshev) exactly, except the functions are prefixed by `legendre`."
+    "Usage follows from the [Chebyshev](#Chebyshev) exactly, except the functions are prefixed by `legendre`.  No plots here - they would be identical to those from the Jacobi section."
    ]
   },
   {
@@ -323,7 +332,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prysm.polynomials import legendre, legendre_sequence, legendre_2d_sequence"
+    "from prysm.polynomials import legendre, legendre_sequence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dickson\n",
+    "These polynomials use a two-term recurrence relation, but are not based on Jacobi polynomials.  For the Dickson polynomials of the first kind $D$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "D_{n+1} &= x \\cdot D_n - \\alpha D_{n-1} \\\\\n",
+    "D_0 &= 2 \\\\\n",
+    "D_1 &= x\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "And the second kind $E$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "E_{n+1} &= x \\cdot E_n - \\alpha E_{n-1} \\\\\n",
+    "E_0 &= 1 \\\\\n",
+    "E_1 &= x\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "The interface is once again the same:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prysm.polynomials import (\n",
+    "    dickson1, dickson1_sequence,\n",
+    "    dickson2, dickson2_sequence\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_ = x[0,:] # not required to be 1D, just for example\n",
+    "# dickson with alpha=0 are monomials x^n, or use alpha=-1 for Fibonacci polynomials\n",
+    "plt.plot(x_, np.array(list(dickson1_sequence([1,2,3,4,5], 0, x_))).T)\n",
+    "plt.title('Dickson1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_ = x[0,:] # not required to be 1D, just for example\n",
+    "# dickson with alpha=0 are monomials x^n, or use alpha=-1 for Fibonacci polynomials\n",
+    "plt.plot(x_, np.array(list(dickson2_sequence([1,2,3,4,5], -1, x_))).T)\n",
+    "plt.title('Dickson2')"
    ]
   },
   {
@@ -403,7 +476,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -417,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
